/*
 * Copyright 2021 LiAuto authors.
 * @yangchunxin
 */

syntax = "proto3";
option go_package = "github.com/minio/minio/protos";
package protos;

// metadata service
message Mds{
  string id = 1;
  string name = 2;
  string type = 3;
  string status = 4;
  string region = 5;
  uint64 used = 6;
  uint64 capacity = 7;
  int32 version = 8;
  repeated string pdservers = 9;
  string created_time = 10;
  string updated_time = 11;
  // others
}

// AK/SK credentials
message Credentials {
  string access_key = 1;
  string secret_key = 2;
}

// storage pool
message Pool {
  string id = 1;
  string name = 2;
  string type = 3;
  string status = 4;
  int32 version = 5;
  string endpoint = 6;
  Credentials creds = 7;
  string created_time = 8;
  string updated_time = 9;
}

// bucket
message Bucket {
  string id = 1;
  string name = 2;
  string status = 3;
  string pool_id = 4;
  int32 version = 5;
  string created_time = 6;
  string updated_time = 7;
}
